--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
 			<artifactId>spring-data-rest-hal-browser</artifactId>
 			<version>3.2.6.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
